[metadata]
name = PPB
version = 0.0.1-dev
description = Your Pythonic Personal Paste Bin
long_description = file: README.md
author = Hendrik Klug
author_email = klugh@ethz.ch
url = https://github.com/Jimmy2027/PPB
keywords =
    personal-paste-bin

provides = ppb

license = GNUv3
license_file = LICENSE

[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
install_requires =
    requests
    pygments

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    norby = ppb.__main__:main

[options.extras_require]
testing =
    pytest

